2003-09-08  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b66

 	* Fixed an issue with the config wizard where it would not properly
	  detect locales when open_basedir is active on FreeBSD. 

	* Adjusted print service text in config wizard

	* Fixed typo in "slideshow_recursive" param name in config wizard

	* Changed "beta version" to "devolpment build" in config wizard
	
2003-09-07  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b65

	* Fix for bug #801580, where polling did not work correctly
	  in view_photo.php.  Now uses correct $id.  Also now uses
	  correct $id to display your current choices in Rank mode.

	* Fixed polling bug where you could not change mode to Critique.

	* Set $GALLERY_BASEDIR in poll_properties.php.

	* Change function selectOptions() so $opts is now a name/value
	  array, where $key is the value returned, and $name is the
	  value displayed (and translated).

	* added photo_owner.php, poll_properties.php, poll_results.php and
	  reset_votes.php to index.php

	* Config.  Wizard changes to support slideshow configuration.  Does not
	  affect behaviour yet.

2003-09-05  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b64

        * Again some corrections. Synced .mo against these

        * New Language: Czech (cs_CZ), Ukrainian (uk_UA)

        * Language updates: German (de_DE), Polish (pl_PL), Simplified Chinese (zh_CN)

        * Corrected po files

	* Synced language files against latest changes and additions


2003-09-05  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b63

	* Quick review of language, then added 3 new files to po/filelist

2003-09-05  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b62

	* You can now vote for subalbums.   Votes are now recorded
	  against "item.$id" or "album.$albumName".   Existing
	  albums are migrated to new vote id. (If you move subalbums,
	  you will lose your votes currenlty.)

	* Added http://www.php.net/manual/en/function.strftime.php