@@ -33,7 +33,7 @@ A:hover
 */
 BODY  
 	{ 
-	  background-color: #ADB6C6;
+	  background-color: #BBCCAA;
 	  color: #000000;
 	}
 TD, P 
