@@ -1,3 +1,15 @@
+2003-09-09  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b67
+
+	* Fixed typo in setup/constants.inc (Thanks Jens).
+
+	* New background colour! Shock and awe all around.
+
+	* Removed spurious PHP notice from upgrade_album.php.
+
+	* Task #84754: Added "transpose/transverse" transformation options to
+	  rotate_image() in order to extend auto-rotate-on-upload's capability
+	  to all defined EXIF image transformations.
+	
 2003-09-08  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b66
 
  	* Fixed an issue with the config wizard where it would not properly
